--- a/documentation.html
+++ b/documentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felp Services Technical Specification</title>
+    <title>Felp Pets Technical Specification</title>
     <style>
         :root {
             --primary-color: #000000;
