--- a/documentation.html
+++ b/documentation.html
@@ -281,7 +281,7 @@
 <body>
     <!-- Navigation Menu -->
     <nav class="nav-menu">
-        <h1>Felp Services Technical Specification</h1>
+        <h1>Felp Pets Technical Specification</h1>
         <div class="nav-links">
             <a href="#overview">Overview</a>
             <a href="#architecture">Architecture</a>
