--- a/documentation.html
+++ b/documentation.html
@@ -300,7 +300,7 @@
     </nav>
 
     <header>
-        <h1>Felp Services Technical Specification</h1>
+        <h1>Felp Pets Technical Specification</h1>
         <p><strong>Version:</strong> 1.0.0 | <strong>Last Updated:</strong> September 19, 2025</p>
         <p><em>A comprehensive technical specification for Felp Services with React/Next.js frontend and Node.js/Express backend</em></p>
     </header>
