--- a/bluebook_documentation.html
+++ b/bluebook_documentation.html
@@ -1320,7 +1320,7 @@ PORT=9000
         <h3>Docker Configuration</h3>
         <p>The application is configured for containerized deployment using Docker. The frontend consists of static HTML, CSS, and JavaScript files, while the backend runs a Python FastAPI server. All services and assets are managed via Docker Compose for easy setup and orchestration.</p>
 
-        <h4>Docker Compose Setup</h4>
+                    <h4>Docker Compose Setup</h4>
         <pre><code>version: '3.8'
 services:
   felp-ai-chat:
@@ -1359,9 +1359,9 @@ services:
       PYTHONPATH: /app
 
     volumes:
-      - ./ui-Game-Port:/app/ui-Game-Port  # Games frontend
-      - ./pet:/app/pet  # Pets frontend
-      - ./pets.md:/app/pets.md  # Pets project config
+      - ./blue_book:/app/blue_book  # Blue Book frontend
+      - ./blue_book.md:/app/blue_book.md  # Blue Book project config
+      - ./blue_book_prompt.txt:/app/blue_book_prompt.txt  # Blue Book AI prompt
       - ./app:/app/app  # Hot reload for Python code (development)
     restart: unless-stopped</code></pre>
     </section>
