--- a/PetsShop_Documentation.html
+++ b/PetsShop_Documentation.html
@@ -350,10 +350,12 @@
                 <h4>Frontend</h4>
                 <ul>
                     <li><strong>Languages:</strong> HTML5, CSS3, JavaScript (ES6+)</li>
-                    <li><strong>Structure:</strong> Organized by feature/module in folders:
+                    <li><strong>Structure:</strong> Organized by main app files:
                         <ul>
-                            <li><code>pet/pet/</code>: Main user-facing pages (home, about, profile, register, signin, legal, policy, t&c), CSS, JS, assets</li>
-                            <li><code>static/images/profiles/</code>: Profile images and other static assets</li>
+                            <li>Pages: <code>home.html, about.html, profile.html, register.html, signin.html, t&c.html, legal.html, policy.html, Untitled.html</code></li>
+                            <li>Styles: <code>home.css, app.css, styles.css, style2.css</code></li>
+                            <li>JS: <code>app.js, felp-ai-universal.js</code> and <code>js/</code> helpers</li>
+                            <li>Assets: <code>assest/public/img/</code> for images</li>
                         </ul>
                     </li>
                     <li><strong>Styling:</strong> Custom CSS and Tailwind CSS for responsive design</li>
