--- a/PetsShop_Documentation.html
+++ b/PetsShop_Documentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felp Pets Technical Specification</title>
+    <title>PetsShop Technical Specification</title>
     <style>
         :root {
             --primary-color: #000000;
@@ -281,7 +281,7 @@
 <body>
     <!-- Navigation Menu -->
     <nav class="nav-menu">
-        <h1>Felp Pets Technical Specification</h1>
+        <h1>PetsShop Technical Specification</h1>
         <div class="nav-links">
             <a href="#overview">Overview</a>
             <a href="#architecture">Architecture</a>
@@ -300,9 +300,9 @@
     </nav>
 
     <header>
-        <h1>Felp Pets Technical Specification</h1>
+        <h1>PetsShop Technical Specification</h1>
         <p><strong>Version:</strong> 1.0.0 | <strong>Last Updated:</strong> September 19, 2025</p>
-        <p><em>A comprehensive technical specification for Felp Pets with HTML/JS frontend and Python-Fast API backend</em></p>
+        <p><em>A comprehensive technical specification for PetsShop with HTML/JS frontend and Python-Fast API backend</em></p>
     </header>
 
     <section id="overview" class="section">
@@ -1451,8 +1451,8 @@ Types:
     </section>
 
     <footer style="text-align: center; margin-top: 50px; padding: 20px; border-top: 1px solid var(--border-color); color: #666;">
-        <p><strong>Felp Pets Technical Specification v1.0.0</strong></p>
-        <p>This document serves as the technical specification for Felp Pets.</p>
+        <p><strong>PetsShop Technical Specification v1.0.0</strong></p>
+        <p>This document serves as the technical specification for PetsShop.</p>
         <p>Last updated: September 19, 2025</p>
     </footer>
 </body>
