--- a/GamePort_documentation.html
+++ b/GamePort_documentation.html
@@ -389,7 +389,6 @@
             <ul>
                 <li><strong>OpenAI:</strong> GPT models for enhanced search and chat (Python SDK)</li>
                 <li><strong>FastAPI:</strong> OpenAPI specification & Swagger UI</li>
-                <li><strong>Embedding Services:</strong> AI-powered content embeddings (Python)</li>
                 <li><strong>Speech Services:</strong> Text-to-speech and speech recognition (Python)</li>
                 <li><strong>JWT/OAuth2:</strong> Secure authentication for API integrations</li>
             </ul>
@@ -418,15 +417,6 @@
                     <li><strong>Query Enhancement:</strong> Query rewriting and expansion via AI</li>
                     <li><strong>Response Generation:</strong> Dynamic content recommendations</li>
                     <li><strong>API Rate Management:</strong> Token usage tracking and limits (Python)</li>
-                </ul>
-
-                <h4>Embedding & Vector Search</h4>
-                <ul>
-                    <li><strong>Content Embeddings:</strong> AI-generated vector representations (OpenAI or Python libraries)</li>
-                    <li><strong>Semantic Similarity:</strong> Meaning-based content matching</li>
-                    <li><strong>Search Optimization:</strong> Fast vector similarity searches (Python)</li>
-                    <li><strong>Batch Processing:</strong> Automated embedding generation for new content</li>
-                    <li><strong>Indexing Strategy:</strong> Optimized vector database operations (MongoDB, Python)</li>
                 </ul>
 
                 <h3>Real-time Features & WebSockets</h3>
@@ -1044,9 +1034,9 @@ X-API-Key: &lt;api_key&gt; (for admin operations)</code></pre>
             <strong>Backend Performance:</strong>
             <ul>
                 <li><strong>Database Indexing:</strong> Proper indexes on frequently queried fields</li>
-                <li><strong>Query Optimization:</strong> Use MongoDB aggregation pipelines efficiently</li>
+                <li><strong>Query Optimization:</strong> Use SQL aggregation pipelines efficiently</li>
                 <li><strong>Caching:</strong> Implement Redis for session and data caching</li>
-                <li><strong>Connection Pooling:</strong> Configure MongoDB connection pooling</li>
+                <li><strong>Connection Pooling:</strong> Configure SQL connection pooling</li>
                 <li><strong>API Response Compression:</strong> Enable gzip compression</li>
             </ul>
         </div>
@@ -1194,15 +1184,6 @@ PORT=9000
             <li><strong>Directory Management:</strong> Automatic upload directory creation</li>
             <li><strong>Environment Configuration:</strong> Configurable upload paths</li>
             <li><strong>Multi-format Support:</strong> Images, videos, and documents</li>
-        </ul>
-
-        <h4>Media Management</h4>
-        <ul>
-            <li><strong>Gallery System:</strong> Multiple media types per content item</li>
-            <li><strong>External Media:</strong> YouTube video embedding support</li>
-            <li><strong>Image Optimization:</strong> Next.js automatic image optimization</li>
-            <li><strong>Responsive Images:</strong> Multiple size variants</li>
-            <li><strong>CDN Ready:</strong> Configurable for cloud storage integration</li>
         </ul>
 
         <h3>Docker Configuration</h3>
