--- a/MyFinder_documentation.html
+++ b/MyFinder_documentation.html
@@ -390,7 +390,7 @@
             <ul>
                 <li><strong>OpenAI:</strong> GPT models for enhanced search and chat (Python SDK)</li>
                 <li><strong>FastAPI:</strong> OpenAPI specification & Swagger UI</li>
-                <li><strong>Speech Services:</strong> Text-to-speech and speech recognition (Python)</li>
+                <li><strong>Speech Services:</strong> Speech-to-text and speech recognition (Python)</li>
                 <li><strong>JWT/OAuth2:</strong> Secure authentication for API integrations</li>
             </ul>
         </div>
